--- a/templates/base.html
+++ b/templates/base.html
@@ -11,17 +11,6 @@
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">   
 
-    <style>
-body {
- background-image: url("https://raw.githubusercontent.com/mobassir94/web-input-validation-practice/master/MyLogo/chestreader.png");
- height: 900px;
- background-repeat: no-repeat;
- background-position: 400px 60px;
- background-size: 550px 550px;
-}
-</style>   
-
-
 
  
 </head>
@@ -31,14 +20,21 @@ body {
 
     <nav class="navbar navbar-dark bg-dark">
         <div class="container"  >
-            <a class="navbar-brand" href="#">Tuberculosis Test (Deep Learning/ML powered Web App)</a>
+            <a class="navbar-brand" href="#">Tuberculosis Test (Deep Learning powered Web App)</a>
         </div>
     </nav>
+
+
+
+
     <div class="container">
-        <div id="content" style="margin-top:35em">{% block content %}{% endblock %}</div>
+        <div id="content" style="margin-top:1em">{% block content %}{% endblock %}</div>
     </div>
     <h1> </h1>
 </body>
+
+<img src="https://raw.githubusercontent.com/mobassir94/web-input-validation-practice/master/MyLogo/chestreader.png" alt="" style="width:600px;height:400px;margin-left: 300px; margin-right: 300px;margin-top: 0.1em"> 
+
 
 <footer>
     <script src="{{ url_for('static', filename='js/main.js') }}" type="text/javascript"></script>    
