--- a/deep-learning-pneumonia-detection-web-app/templates/base.html
+++ b/deep-learning-pneumonia-detection-web-app/templates/base.html
@@ -4,23 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pneumonia Detection Web App</title>
+    <title>Chest Reader</title>
     <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">      
+    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">   
+
+    <style>
+
+
+</style>   
+
+
+
+ 
 </head>
 
-<body>
+
+<body style="background-color: powderblue">
+
     <nav class="navbar navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">Pneumonia Detection Web App</a>
+        <div class="container"  >
+            <a class="navbar-brand" href="#">Tuberculosis Test (Deep Learning/ML powered Web App)</a>
         </div>
     </nav>
     <div class="container">
-        <div id="content" style="margin-top:2em">{% block content %}{% endblock %}</div>
+        <div id="content" style="margin-top:30em">{% block content %}{% endblock %}</div>
     </div>
+    
 </body>
 
 <footer>
