--- a/deep-learning-pneumonia-detection-web-app/templates/index.html
+++ b/deep-learning-pneumonia-detection-web-app/templates/index.html
@@ -1,15 +1,14 @@
 {% extends "base.html" %} {% block content %}
 
 <body>
-This web application is based on a 2-layer convolutional neural network (CNN), trained to recognise pneumonia on chest x-rays. The neural network achieved accuracy exceeding 86% on the relevant test set of more than 500 x-rays. Please note that the predictive accuracy of the model, depends on the quality and quantity of the training data. Therefore the model has limitations and cannot be used for definite clinical predictions! Instead it can be used for research and comparison purposes (please see notes below).
-</body>
 
-<h2></h2>
-
-<div>
+    
+<br><br>
+ 
+ <div>
     <form id="upload-file" method="post" enctype="multipart/form-data">
         <label for="imageUpload" class="upload-label">
-            Select Image
+            Click Here to Upload Chest X-ray Image
         </label>
         <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg">
     </form>
@@ -30,15 +29,78 @@ This web application is based on a 2-layer convolutional neural network (CNN), t
         <span> </span>
     </h3>
 
+  
 </div>
-<body>
-NOTES
+
+
+
+
+
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $("#hide").click(function(){
+    $(".hidemebe").hide();
+  });
+  $("#show").click(function(){
+    $(".hidemebe").show();
+  });
+});
+</script>
+
+
+
+
+<button id="hide">Click Me to Hide Details</button>
+<button id="show">Click Me to Show some Details About the App</button>
+
+
+
+<p>
+<div class = "hidemebe" style="display:none">
+
+
+
+<h2 align="center" style="background-color: steelblue; color: lightcyan;"> WELCOME TO CHESTREADER!!! </h2>
+<br><br>
+<h5 style="background-color: #05ffb0; color: white;">
+This software uses pre-trained vgg16 with U-NET convolutional neural network (CNN) architecture to recognise tuberculosis on chest x-rays with having model accuracy 97% and validation accuracy 88% and
+The model is trained on a <a href="https://www.kaggle.com/kmader/pulmonary-chest-xray-abnormalities" style="color:black">Dataset
+</a>  of 800 images(which is very small dataset) from two sources Shenzhen and Montgomery respectively. 
+
+
+
+</h5>
+ 
+ <br>
+ <br>
+
+<h1> Model performance : </h1>
+<br>
+
+<img src="https://raw.githubusercontent.com/mobassir94/web-input-validation-practice/master/MyLogo/confusionmatrixTB.png" alt="" width="800" height="200"> 
+
+
+<br>
+<br>
+<br>
+<h1>NOTES : </h1>
 <ul>
-<li>This deep learning model has been trained and validated, using the following dataset: <a href="https://data.mendeley.com/datasets/rscbjbr9sj/2">Kermany Daniel, Zhang Kang, Goldbaum Michael (2018). Labeled Optical Coherence Tomography (OCT) and Chest X-Ray Images for Classification. Mendeley Data, v2, http://dx.doi.org/10.17632/rscbjbr9sj.2</a></li>
-<li><b style="color:red;">The suitability of this deep learning model for clinical use has not been validated. Therefore it cannot be used for any clinical purpose! It can be used for research purposes and for comparison with other similar models.</b></li>
-<li>This web application has been created using code developed by Xin Fu (please see the following repository: </h2><a href="https://github.com/mtobeiyf/keras-flask-deploy-webapp">https://github.com/mtobeiyf/keras-flask-deploy-web-app</a></li>
-<li>The final code for this specific web app along with the trained model data can be found in the following repository: </h2><a href="https://github.com/tberris/deep-learning-pneumonia-detection-web-app">https://github.com/tberris/deep-learning-pneumonia-detection-web-app</a></li>
-<li>For any comments or suggestions please contact Theocharis Berris at: theocharisberris@gmail.com</li>
+<li>This app is a prototype</li>
+
+<li>Please note that the predictive accuracy of the model, depends on the quality and quantity of the training data.</li>
+
+
+<li>This system converts the x-ray image you provide to 512x512 pixel and then uses it for prediction,so if the quality of your provided picture is low means the system can make mistakes</li>
+
+<li>This system takes only pictures with .png, .jpg and .jpeg extension </li>
+
+<li>For any comments or suggestions please contact <a href="https://bd.linkedin.com/in/mobassir-hossen-916a83137/" >Mobassir Hossen</a> at: mobassirhossen94@gmail.com</li>
 </ul>
+</div>
+</p>
 </body>
 {% endblock %}
